# immersion-whisper

./: .env.example  .gitignore  README.md  condenser.py  config.default.yaml  deck_creator.py  frequency_analyzer.py  main.py  pyproject.toml  transcriber.py  translator.py
anki/: styles.css
scripts/: create_db.py
src/immersion_whisper/: args.py  config.py  main.py  utils.py
src/immersion_whisper/core/: condenser.py  deck_creator.py  frequency_analyzer.py  sub_processor.py  transcriber.py  translator.py
src/immersion_whisper/database/: models.py  setup.py
src/immersion_whisper/exporters/: deck_creator.py
src/immersion_whisper/exporters/templates/: back.html  front.html
